--- a/algamoney-api/src/main/resources/application.properties
+++ b/algamoney-api/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost/algamoneyapi?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
